packages/components/table/style/index.less
@import '../../style/mixins/clearfix.less';
@import '../../style/mixins/ellipsis.less';
@import '../../style/mixins/reset.less';

@import './border.less';
@import './fixed.less';
@import './radius.less';
@import './size.less';

.@{table-prefix} {
  .reset-component();
  .clearfix();

  max-width: 100%;

  &-container {
    position: relative;
    background: @table-background;

    &::before,
    &::after {
      position: absolute;
      top: 0;
      bottom: 0;
      z-index: 1;
      width: 30px;
      transition: box-shadow 0.3s;
      content: '';
      pointer-events: none;
    }

    &::before {
      left: 0;
    }

    &::after {
      right: 0;
    }
  }

  table {
    width: 100%;
    border-collapse: separate;
    border-spacing: 0;
  }

  th {
    position: relative;
    color: @table-head-color;
    background: @table-head-background;
    font-weight: @table-head-font-weight;
    overflow-wrap: break-word;
    border-bottom: @table-border-width @table-border-style @table-border-color;

    &:not(:last-child)::before {
      position: absolute;
      top: 50%;
      right: 0;
      width: 1px;
      height: 1.6em;
      background-color: @table-head-split-color;
      transform: translateY(-50%);
      content: '';
    }
  }

  thead > tr:not(:last-child) > th {

    &[colspan] {
      border-bottom: 0;
    }
  }

  thead > tr > th[colspan]:not([colspan='1']) {
    text-align: center;
  }

  td {
    position: relative;
    border-bottom: @table-border-width @table-border-style @table-border-color;
    overflow-wrap: break-word;
    transition: background 0.3s;

    // TODO: Nest Table
  }

  tr {

    &:hover {

      > td {
        background: @table-body-hover-background;
      }
    }
  }

  &-align {

    &-start {
      text-align: start;
    }

    &-center {
      text-align: center;
    }

    &-end {
      text-align: end;
    }
  }

  &-ellipsis {
    .ellipsis();

    .@{table-prefix}-cell-title {
      .ellipsis();
    }
  }

  &-cell-title {
    position: relative;
    z-index: 1;
    flex: 1;
  }

  &-cell-scroll-bar {
    box-shadow: 0 1px 0 1px @table-head-background;
  }

  &-pagination {
    display: flex;
    flex-wrap: wrap;
    margin: @table-pagination-margin;

    > * {
      flex: none;
    }

    &-start {
      justify-content: flex-start;
    }

    &-center {
      justify-content: center;
    }

    &-end {
      justify-content: flex-end;
    }
  }

  // --------- Selectable ---------

  & &-col-selectable {
    width: 40px;
  }

  & &-col-selectable&-selectable-with-options {
    width: 60px;
  }

  & &-cell-selectable {
    & > .@{idux-prefix}-dropdown-trigger {
      margin-left: 4px;
    }
  }

  & &-row-selected {

    & > td {
      background: @color-primary-l50;
    }

    &:hover > td {
      background: darken(@color-primary-l50, 2%);
    }
  }

  // --------- Sortable ---------

  &-cell-sortable {
    cursor: pointer;
    transition: background 0.3s;

    &:hover {
      background: @table-body-hover-background;
    }
  }

  & th&-cell-sorted,
  & td&-cell-sorted {
    background: @table-body-hover-background;
  }

  &-sortable {
    display: flex;
    flex: auto;
    align-items: center;
    justify-content: space-between;

    &-trigger {
      display: inline-flex;
      flex-direction: column;
      align-items: center;
      color: @table-head-icon-color;
      font-size: 10px;
      transition: color 0.3s;

      &-active {
        color: @color-primary;
      }

      .@{idux-prefix}-icon + .@{idux-prefix}-icon {
        margin-top: -0.2em;
      }
    }
  }
}

